# sample

./: a.out  fork.c  gitkrakenexam.txt  pcantx1.c
EV_Charger/05-10-23_phycloud/: Smart-UI-Info.pptx  evcharger.txt
EV_Charger/Ref/: EVC.pptx  ocpp_study_links.docx
EV_Charger/Source_codes/: EV_charger_IISC_WBS.xlsx
EV_Charger/Source_codes/AWS_app/: json_msgs.xlsx
EV_Charger/Source_codes/AWS_app/aws-iot-device-sdk-c/: aws-iot-device-sdk-c_2.1.1.bb
EV_Charger/Source_codes/AWS_app/aws-iot-device-sdk-c/files/: aws_iot_config.h  aws_iot_config.h_ganesh  subscribe_publish_sample.c
EV_Charger/Source_codes/AWS_app/aws-iot-device-sdk-c/files/certs/: README.txt  e473d1a14a8e42a61040e4de7f89763f09669af0510f20915608e256c65375d8-certificate.pem.crt  e473d1a14a8e42a61040e4de7f89763f09669af0510f20915608e256c65375d8-private.pem.key  e473d1a14a8e42a61040e4de7f89763f09669af0510f20915608e256c65375d8-public.pem.key  switch.cert.pem  switch.private.key
EV_Charger/Source_codes/CAN_app/can-app/: can-app_0.1.bb
EV_Charger/Source_codes/CAN_app/can-app/files/: CMakeLists.txt
EV_Charger/Source_codes/CAN_app/can-app/files/inc/: can.h  can_app.h  log.h
EV_Charger/Source_codes/CAN_app/can-app/files/scripts/: can_up.sh
EV_Charger/Source_codes/CAN_app/can-app/files/src/: can.c  canAPp.h  canApp.c  can_app.c  can_app.c_bckup  work.c
EV_Charger/Source_codes/OCPP/: ocpp_study_links.docx
EV_Charger/Source_codes/SW_architecture/: EV_block_diagram.drawio  IISC_EV_charger.docx
EV_Charger/Source_codes/dbus_library/dbus-wrapper/: dbus-wrapper_0.1.bb
EV_Charger/Source_codes/dbus_library/dbus-wrapper/files/: CMakeLists.txt
EV_Charger/Source_codes/dbus_library/dbus-wrapper/files/src/: dbus_wrapper.c
EV_Charger/Source_codes/smart-app/: smart-app_0.1.bb
EV_Charger/Source_codes/smart-app/files/: CMakeLists.txt
EV_Charger/Source_codes/smart-app/files/inc/: log.h  smart_app.h
EV_Charger/Source_codes/smart-app/files/src/: smart_app.c
EV_Charger/Source_codes/yocto_setup/: README.txt
EV_Charger/Source_codes/yocto_setup/patches/: 0001-IISC-EV-charger-Application.patch
EV_Charger/design_docs/: EV_charger_IISC_WBS.xlsx
EV_Charger/design_docs/AWS_app/: json_msgs.xlsx
EV_Charger/design_docs/CAN_app/: can_json_msg.txt
EV_Charger/design_docs/OCPP/: ocpp_study_links.docx
EV_Charger/design_docs/SW_architecture/: EV_block_diagram.drawio  IISC_EV_charger.docx  IISC_EV_charger_old.docx  sw_arch_blockdiagram.drawio  system_msgs_sequence_flow.drawio
EV_Charger/design_docs/dbus_library/: dbus_study_links.txt
ctask/: 18_sum.c  22_30odd.c  31_p1.c  48_asc.c  a.out
ctaskfinal3/: Makefile
evcharger/: work.c
evcharger/everest/my_workspace2/everest_project/: dependencies.yaml
evcharger/everest/my_workspace2/everest_project/modules/CANReader/: manifest.yaml
evcharger/everest/my_workspace2/everest_project/modules/CANReader/src/: can_read_thread.cpp
evcharger/everest/my_workspace2/everest_project/modules/DBusListener/: manifest.yaml
evcharger/everest/my_workspace2/everest_project/modules/DBusListener/src/: dbus_listener.cpp  dbus_listener.hpp
evcharger/everest_project/: CMakeLists.txt
evcharger/everest_project/modules/: CMakeLists.txt
evcharger/everest_project/modules/CANReader/: CMakeLists.txt
evcharger/everest_project/modules/CANReader/src/: can_read_thread.cpp  can_read_thread.hpp
evcharger/everest_project/modules/DBusListener/: CMakeLists.txt
evcharger/everest_project/modules/DBusListener/src/: dbus_listener.cpp
